update swagger for Social Media
